Linked Color Palette datablocks can not be used #92290

Closed
opened 2021-10-17 14:12:01 +02:00 by Ludvik Koutny · 7 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 2.93.4, branch: master (modified), commit date: 2021-08-31 09:23, hash: b7205031ce
Worked: (newest version of Blender that worked as expected)

Short description of error
When linking the color palette datablock, the individual palette swatches are disabled, therefore can't be activated:
image.png
Clicking the color swatches doesn't do anything. This makes linking color palettes useless.

Exact steps for others to reproduce the error

  1. In the Brush Settings create a new paint palette in a .blend file and save it.
  2. Create another, new blend file and link the palette datablock saved in the previous file.
  3. Enter texture or vertex paint mode, and select the linked palette in the tool settings UI.
    Result: Linked palette colors can not be used to set paint color
    Expected: Linked palette colors can be used to set paint color
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 2.93.4, branch: master (modified), commit date: 2021-08-31 09:23, hash: `b7205031ce` Worked: (newest version of Blender that worked as expected) **Short description of error** When linking the color palette datablock, the individual palette swatches are disabled, therefore can't be activated: ![image.png](https://archive.blender.org/developer/F11207273/image.png) Clicking the color swatches doesn't do anything. This makes linking color palettes useless. **Exact steps for others to reproduce the error** 1. In the `Brush Settings` create a new [paint palette ](https://docs.blender.org/manual/en/latest/interface/controls/templates/color_palette.html) in a .blend file and save it. 2. Create another, new blend file and link the palette datablock saved in the previous file. 3. Enter texture or vertex paint mode, and select the linked palette in the tool settings UI. Result: Linked palette colors can not be used to set paint color Expected: Linked palette colors can be used to set paint color
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The message implies that this is a limitation.
But this makes linked palettes totally useless.
The strange thing is that we can add and delete colors, but don't use them!
The behavior looks swapped. (We should only be able to use the values and not delete or add).

The message implies that this is a limitation. But this makes linked palettes totally useless. The strange thing is that we can add and delete colors, but don't use them! The behavior looks swapped. (We should only be able to use the values and not delete or add).

This issue was referenced by 01e2a532f5

This issue was referenced by 01e2a532f55ee2de3bfd1c0d97d063976546a036

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-10-22 14:59:55 +02:00

@mano-wii this was more a #sculpt_paint_texture topic tbh, #core cannot be responsible for all and every wrong handling of linked data... But ok, fixed now.

@mano-wii this was more a #sculpt_paint_texture topic tbh, #core cannot be responsible for all and every wrong handling of linked data... But ok, fixed now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92290
No description provided.